fix popup box too small

--- a/transitrack/static/style.css
+++ b/transitrack/static/style.css
@@ -11,8 +11,8 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.4;
-  width: 200px;
-  height: 100px;
+  width: 300px;
+  height: 200px;
   transition: all 0.2s;
   pointer-events: none;  /* Prevents the tooltip from interfering with mouse events */
 }
